Ahora usa fetch y parsea bien el JSON

--- a/Pagina Prueba.html
+++ b/Pagina Prueba.html
@@ -1,36 +1,9 @@
 <script>
-function getXMLHttpRequest() 
-{
-    if (window.XMLHttpRequest) {
-        return new window.XMLHttpRequest;
-    }
-    else {
-        try {
-            return new ActiveXObject("MSXML2.XMLHTTP.3.0");
-        }
-        catch(ex) {
-            return null;
-        }
-    }
-}
-
-function handler()
-{
-    if (oReq.readyState == 4 /* complete */) {
-        if (oReq.status == 200) {
-            console.log(oReq.responseText);
-        }
-    }
-}
-
-var oReq = getXMLHttpRequest();
-
-if (oReq != null) {
-    oReq.open("GET", "http://localhost:5000/api/turnos", true);
-    oReq.onreadystatechange = handler;
-    oReq.send();
-}
-else {
-    window.alert("AJAX (XMLHTTP) not supported.");
-}
+    fetch("http://localhost:5000/api/turnos")
+        .then(function (response) {
+            return response.json();
+        })
+        .then(function (jsonResponse) {
+            console.log(jsonResponse);
+        });
 </script>
