--- a/Pagina/Pagina Prueba.html
+++ b/Pagina/Pagina Prueba.html
@@ -55,13 +55,13 @@
             return element;
           });
 
-
+          console.log(mapa);
           document.getElementById("hora").innerHTML = "";
           mapa.forEach((element) => {
             let hora = element.fecha.split("T")[1].split(':');
 
             optionList.add(
-              new Option(hora[0] + ":" + hora[1], hora[0] + ":" + hora[1], false)
+              new Option(hora[0] + ":" + hora[1], element.id)
             )
           })
 
@@ -72,8 +72,6 @@
       event.preventDefault();
 
       arrayfecha = document.getElementById('fecha').value.split("-");
-
-
 
       fechautc = new Date(Date.UTC(arrayfecha[0], arrayfecha[1] - 1, arrayfecha[2]));
       formdata = event.target;
@@ -91,23 +89,18 @@
     function handleSubmit(event) {
       event.preventDefault();
 
-      arrayfecha = document.getElementById('fecha').value.split("-");
+      id = document.getElementById('hora').value;
 
-      arrayhora = document.getElementById('hora').value.split(":");
-
-      fechautc = new Date(Date.UTC(arrayfecha[0], arrayfecha[1] - 1, arrayfecha[2], arrayhora[0], arrayhora[1]));
-      const myFormData2 = new FormData(formdata);
-      const myFormData = new FormData(event.target);
       const formDataObj = {};
-      myFormData2.forEach((value, key) => (formDataObj[key] = value));
-      myFormData.forEach((value, key) => (formDataObj[key] = value));
-      formDataObj['fecha'] = fechautc;
-      enviar(JSON.stringify(formDataObj));
+      formDataObj['email']=document.getElementById('email').value;
+      formDataObj['userId']=0;
+      enviar(id, JSON.stringify(formDataObj));
     }
 
-    function enviar(value) {
+    function enviar(id, value) {
+      console.log(value);
       var response
-      fetch('http://localhost:5000/api/turnos', {
+      fetch('http://localhost:5000/api/turnos/' + id, {
         method: 'POST',
         body: value,
       })
